added few lines to branch addinfo

--- a/Assignment 3/sample_page.html
+++ b/Assignment 3/sample_page.html
@@ -8,5 +8,7 @@
   <body>
     <h1>Hello, This is hari</h1>
     <h2>Hello, UST</h2>
+    <p>Added this paragraph from branch addinfo</p>
+    <p>Merge this one</p>
   </body>
 </html>
